# git-twig

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  versions.json
.github/workflows/: bump.yaml  docs.yaml  lint.yaml
0.5.x/CHANGELOG/: index.html
dev/: 404.html  index.html
dev/CHANGELOG/: index.html
dev/docs/cli/: index.html
dev/search/: search_index.json
docs/: cli.md
latest/CHANGELOG/: index.html
latest/docs/cli/: index.html
src/git_twig/: __main__.py  git.py
src/git_twig/cli/click/: decorators.py
src/git_twig/cli/commands/: __init__.py  init.py  repository.py  worktree.py
